[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SentenceBox.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]
PanelContainer/icons/PanelContainer = null

[node name="SentenceBox" type="PanelContainer"]
margin_right = 640.0
margin_bottom = 150.0
rect_min_size = Vector2( 640, 120 )
size_flags_vertical = 0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 98.0
size_flags_vertical = 0

[node name="OriginalSentence" type="Label" parent="VBoxContainer"]
margin_right = 626.0
margin_bottom = 14.0
text = "Original sentence"

[node name="UserTranslation" type="TextEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 626.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 55 )

[node name="Indicator" type="Label" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 626.0
margin_bottom = 91.0
[connection signal="text_changed" from="VBoxContainer/UserTranslation" to="." method="_on_text_changed"]
